--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,18 @@ body {
     font-size: 3rem;
 }
 
+.buttons {
+    align-items: center;
+    margin: auto;
+    color: #fff;
+    padding-bottom: 10px;
+    padding: 5px;
+    background-color: transparent;
+    color: #fff;
+    border-radius: 6px;
+    border: none;
+}
+
 .timer__buttons {
     align-items: center;
     margin: auto;
@@ -57,7 +69,7 @@ body {
     border: none;
 }
 
-.timer_start:hover {
+.buttons:hover {
     background-color: #fc3468;
 }
 
