--- a/css/style.css
+++ b/css/style.css
@@ -3,11 +3,12 @@ body {
     margin: 0;
     padding: 0;
     background-color: #ffc2cd;
-    height: 100vh;
+    height: 375px;
 }
 
 .container {
     width: 350px;
+    height: 60%;
     background-color: #ff6289;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -15,8 +16,8 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 40vh;
-    margin: 20px auto auto;
+    margin: 40% 20px 20px;
+
 }
 
 .timer {
